# sparse-linear-algebra-tests

./: Cargo.toml  README.md  SPARSE_EINSUM_APPROACHES.md  bench_report.md  bob_results_0.csv  bob_results_1.csv  bob_results_2.csv  bob_results_3.csv  bob_results_4.csv  btree_overhead.csv  csv2table.py  pathmap_sla.rs  plot_bob.gp  plot_bob_multi.gp  plot_crossover.py  plot_overhead.py  plot_surface.py  requirements.txt  timing-bob.csv
.cargo/: config.toml
einsum-dyn/: Cargo.toml
einsum-dyn/benches/: einsum_bench.rs  vm_bench.rs
einsum-dyn/src/: lib.rs  sparse.rs
einsum-pm/: Cargo.toml
einsum-pm/src/: lib.rs
einsum-pm/tests/: einsum.rs
src/: chunked.rs  dense.rs  dense_btree.rs  graph.rs  graph_csr.rs  graph_csr_btree.rs  graph_csr_builder.rs  graph_magnus.rs  graph_sprs.rs  lib.rs  main.rs  sparse.rs  traits.rs
