[package]
name = "sparse-linear-algebra-tests"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pathmap_sla"
path = "src/main.rs"

[dependencies]
num-traits = "0.2.19"
pathmap = { git = "https://github.com/Adam-Vandervorst/PathMap" }
rand_distr = { version = "0.5.1" }
rand = { version = "0.9.0" }
blas = "0.23.0"
blas-src = { version="0.14.0", features = ["openblas"] }
rayon = "1"
sprs = "0.11.4"
magnus = { git = "https://github.com/22-426/ICS25-SpGEMM-magnuspp" }

[features]
viz = []
long-tests = []
